# schemashift

./: .gitignore  README.md  pyproject.toml
examples/: products.csv  products_v2.csv  users_v1.json  users_v2.json
src/schemashift/: __init__.py  cli.py  detector.py  differ.py  renderer.py  store.py  watcher.py
