[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "schemashift"
version = "1.0.0"
description = "Detect schema drift in JSON and CSV data files — live or on-demand"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
dependencies = [
    "click>=8.1",
    "rich>=13.0",
]

[project.scripts]
schemashift = "schemashift.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/schemashift"]
